# tech-kg-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  全功能文档.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-test.yml
app/: main.py
app/routers/: entity_binding.py  entity_extraction.py  entity_linking.py  relation_extraction.py
app/schemas/: __init__.py  entity_binding.py  entity_extraction.py  kg_visual.py  relation_extraction.py
app/services/: binding_matcher.py  entity_alignment.py  entity_binding.py  entity_disambiguation.py  entity_extraction_writer.py  entity_extractor.py  expert_direct_cache.py  extraction_job_runner.py  extraction_task_store.py  graphrag_demo.py  kg_visual.py  relation_extraction.py  relation_extraction_writer.py  semantic_matcher.py  text_ngram.py
app/static/: binding.html
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  expert_direct_relation_implementation.md  main.py  pyproject.toml
backend/app/: main.py
backend/application/: common_capability.py  enterprise_background_analysis.py  expert_alumni_relation.py  expert_colleague_relation.py  expert_cooperation_achievement.py  expert_direct_relation.py  expert_enterprise_mining.py  expert_enterprise_relation.py  expert_indirect_relation.py  expert_paper_cooperation.py  industry_chain_panorama.py  industry_chain_topn_event.py  kg_construction.py  relation_detail_annotation.py
backend/config/: config_dev.yml  config_product.yml  config_stage.yml
backend/dao/: base.py  gkx_organization.py  paper.py  (+7 more)
docs/: 跨库绑定使用指南.md  跨库绑定设计文档.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  vite.config.ts
graph_db/: __init__.py  base.py  config.py  models.py
schemas/: 01_scholar.sql  03_foreign_paper.sql  05_domestic_project.sql  06_foreign_project.sql  07_domestic_organization.sql  08_foreign_organization.sql  09_industry_chain.sql
tests/: conftest.py  test_binding_matcher.py  test_entity_binding.py  test_graph_db_services.py  test_graphrag_demo.py  test_kg_visual.py  test_main.py  test_trs_graph_backend.py
(+389 files in other folders)
