[project]
name = "tech-kg-api"
version = "0.1.0"
description = "亿级知识图谱 API 接口"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "zai>=0.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["app*", "graph_db*"]
